# OpenDataWuerzburg-GardenerMap

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py  generate_dashboard.py  index.html
data/stadtbezirke-sozialdaten/: README.md  Wuerzburg_Stadtbezirke_Sozialdaten.xlsx  build.py  long_all.csv
docs/: ARCHITECTURE.md  ROADMAP.md
src/wuerzburg_gardener_map/: chat.py  opendata.py  server.py
tests/: test_core.py
